# data-structures-and-algorithms

./: package-lock.json
code-challenges/: challenges-12.test.js  challenges-13.test.js
code-challenges/chaining-challenge/: challenges-10.test.js
code-challenges/filter-challenge/: challenges-08.test.js
code-challenges/for-each/: challenges-01.test.js
code-challenges/map-challenge/: challenges-07.test.js
code-challenges/object-keys/: challenges.06.test.js
code-challenges/reduce-challenge/: challenges-09.test.js
code-challenges/regex-2/: challenges-11.test.js
code-challenges/regular-expressions/: challenges-04.test.js
code-challenges/sort-challenge/: challenges-03.test.js
code-challenges/split-splice/: challenges-05.test.js
code-challenges/value-vs-refernce/: challenges-02.test.js
python/code_challenges/array-binary-search/: README.md
python/code_challenges/array-shift/: readme.md
python/code_challenges/array_reverse/: readme.md
python/code_challenges/fifo_animal_shelter/: README.md
python/code_challenges/graph/: README.md  graph.py
python/code_challenges/hashtable/: README.md  hashtable.py  (+2 more)
python/code_challenges/linked_list/: README.md  pyproject.toml
python/code_challenges/linked_list/linked_list/: linked_list.py  ll_zip.py
python/code_challenges/linked_list/tests/: test.py  test_linked_list.py
python/code_challenges/stack_and_queue/: README.MD  pyproject.toml
python/code_challenges/stack_and_queue/stacks_and_queues/: stacks_and_queues.py
python/code_challenges/stack_and_queue/tests/: test_queue.py  test_stack.py
(+34 files in other folders)
